--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build --turbopack",
     "start": "next start",
     "lint": "next lint"
@@ -13,26 +13,23 @@
     "@emotion/react": "^11.14.0",
     "dotenv": "^16.5.0",
     "drizzle-orm": "^0.44.2",
-    "next": "15.4.0-canary.71",
+    "lucide-react": "^0.513.0",
+    "next": "^15.4.0-canary.75",
     "next-themes": "^0.4.6",
     "pg": "^8.16.0",
     "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "react-icons": "^5.5.0"
+    "react-dom": "19.1.0"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
+    "@eslint/eslintrc": "^3.3.1",
+    "@types/node": "^22.15.30",
     "@types/pg": "^8.15.4",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^19.1.6",
+    "@types/react-dom": "^19.1.6",
     "drizzle-kit": "^0.31.1",
-    "eslint": "^9",
-    "eslint-config-next": "15.4.0-canary.71",
-    "tailwindcss": "^4",
+    "eslint": "^9.28.0",
+    "eslint-config-next": "15.4.0-canary.72",
     "tsx": "^4.19.4",
-    "typescript": "^5"
-  },
-  "packageManager": "pnpm@10.10.0+sha512.d615db246fe70f25dcfea6d8d73dee782ce23e2245e3c4f6f888249fb568149318637dca73c2c5c8ef2a4ca0d5657fb9567188bfab47f566d1ee6ce987815c39"
+    "typescript": "^5.8.3"
+  }
 }
