--- a/.github/workflows/publish-image.yml
+++ b/.github/workflows/publish-image.yml
@@ -12,7 +12,7 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - dockerfile: ./docker/production/compose.yml
+          - dockerfile: ./docker/production/Dockerfile
             appname: maciejgarncarski/findly
             image: ghcr.io/maciejgarncarski/findly
 
