--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@emotion/react": "^11.14.0",
     "dotenv": "^16.5.0",
     "drizzle-orm": "^0.44.2",
+    "jose": "^6.0.11",
     "lucide-react": "^0.513.0",
     "next": "^15.4.0-canary.80",
     "next-themes": "^0.4.6",
     "pg": "^8.16.0",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "server-only": "^0.0.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
