--- a/docker/production/compose.yml
+++ b/docker/production/compose.yml
@@ -37,6 +37,7 @@ services:
       - NEXT_TELEMETRY_DISABLED=1
       - DATABASE_URL=postgresql://postgres:postgres@db/findly?schema=public
       - NODE_ENV=production
+      - SESSION_SECRET=${SESSION_SECRET}
 
 networks:
   app-network:
