--- a/compose.yml
+++ b/compose.yml
@@ -1,7 +1,7 @@
 services:
   db:
     image: postgres:17.4-alpine
-    container_name: findly-db-prod
+    container_name: findly-db
     restart: always
     environment:
       PGUSER: postgres
@@ -19,25 +19,24 @@ services:
     volumes:
       - findly-db-data:/var/lib/postgresql/data
   app:
-    container_name: findly-app-prod
-    image: ghcr.io/maciejgarncarski/findly:latest
-    pull_policy: always
+    container_name: findly-app
     build:
-      context: ../../
-      dockerfile: docker/production/Dockerfile
+      context: .
+      dockerfile: docker/Dockerfile
     depends_on:
       - db
     ports:
-      - "3010:3000"
+      - "3000:3000"
     volumes:
+      - .:/app
       - /app/node_modules
     networks:
       - app-network
     environment:
       - NEXT_TELEMETRY_DISABLED=1
       - DATABASE_URL=postgresql://postgres:postgres@db/findly?schema=public
-      - NODE_ENV=production
-      - SESSION_SECRET=${SESSION_SECRET}
+      - NODE_ENV=development
+      - SESSION_SECRET=${SESSION_SECRET:?SESSION_SECRET_NOT_SET}
 
 networks:
   app-network:
