--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "drizzle-orm": "^0.44.2",
     "jose": "^6.0.11",
     "lucide-react": "^0.513.0",
-    "next": "^15.4.0-canary.80",
+    "next": "^15.3.3",
     "next-themes": "^0.4.6",
     "pg": "^8.16.0",
     "react": "19.1.0",
@@ -30,7 +30,7 @@
     "@types/react-dom": "^19.1.6",
     "drizzle-kit": "^0.31.1",
     "eslint": "^9.28.0",
-    "eslint-config-next": "15.4.0-canary.72",
+    "eslint-config-next": "15.3.3",
     "tsx": "^4.19.4",
     "typescript": "^5.8.3"
   }
