--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "drizzle-orm": "^0.44.2",
     "jose": "^6.0.11",
     "lucide-react": "^0.513.0",
-    "next": "^15.3.3",
+    "next": "^15.4.0-canary.82",
     "next-themes": "^0.4.6",
     "pg": "^8.16.0",
     "react": "19.1.0",
@@ -33,5 +33,6 @@
     "eslint-config-next": "15.3.3",
     "tsx": "^4.19.4",
     "typescript": "^5.8.3"
-  }
+  },
+  "packageManager": "pnpm@10.12.1+sha512.f0dda8580f0ee9481c5c79a1d927b9164f2c478e90992ad268bbb2465a736984391d6333d2c327913578b2804af33474ca554ba29c04a8b13060a717675ae3ac"
 }
