--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "drizzle-kit": "^0.31.1",
     "eslint": "^9.28.0",
     "eslint-config-next": "15.3.3",
+    "eslint-plugin-unused-imports": "^4.1.4",
     "tsx": "^4.20.3",
     "typescript": "^5.8.3"
   }
