--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
+    "dev": "next dev --turbopack",
+    "build": "next build --turbopack",
     "start": "next start",
     "lint": "next lint"
   },
@@ -15,13 +15,12 @@
     "dotenv": "^16.5.0",
     "drizzle-orm": "^0.44.2",
     "jose": "^6.0.11",
-    "lucide-react": "^0.515.0",
-    "next": "^15.4.0-canary.84",
+    "lucide-react": "^0.516.0",
+    "next": "^15.3.3",
     "next-themes": "^0.4.6",
     "pg": "^8.16.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-icons": "^5.5.0",
     "server-only": "^0.0.1",
     "zod": "^3.25.67"
   },
