--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "drizzle-orm": "^0.44.2",
     "jose": "^6.0.11",
     "lucide-react": "^0.516.0",
-    "next": "^15.3.4",
+    "next": "^15.4.0-canary.86",
     "next-themes": "^0.4.6",
     "pg": "^8.16.0",
     "react": "19.1.0",
