--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "db:migrate": "dotenv -c production -- drizzle-kit migrate"
   },
   "dependencies": {
     "@chakra-ui/react": "^3.21.0",
@@ -16,7 +17,7 @@
     "drizzle-orm": "^0.44.2",
     "jose": "^6.0.11",
     "lucide-react": "^0.516.0",
-    "next": "^15.4.0-canary.86",
+    "next": "^15.3.4",
     "next-themes": "^0.4.6",
     "pg": "^8.16.0",
     "react": "19.1.0",
@@ -30,11 +31,11 @@
     "@types/pg": "^8.15.4",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
-    "drizzle-kit": "^0.31.1",
     "eslint": "^9.28.0",
     "eslint-config-next": "15.3.4",
     "eslint-plugin-unused-imports": "^4.1.4",
     "tsx": "^4.20.3",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "drizzle-kit": "^0.31.1"
   }
 }
