--- a/compose.yml
+++ b/compose.yml
@@ -36,7 +36,7 @@ services:
       - NEXT_TELEMETRY_DISABLED=1
       - DATABASE_URL=postgresql://postgres:postgres@db/findly?schema=public
       - NODE_ENV=development
-      - SESSION_SECRET=${SESSION_SECRET:?SESSION_SECRET_NOT_SET}
+      - ACCESS_TOKEN_SECRET=${ACCESS_TOKEN_SECRET:?ACCESS_TOKEN_SECRET_NOT_SET}
       - APP_ORIGIN=${APP_ORIGIN}
       - GOOGLE_CLIENT_ID=${GOOGLE_CLIENT_ID}
       - GOOGLE_CLIENT_SECRET=${GOOGLE_CLIENT_SECRET}
