--- a/docker/Dockerfile.prod
+++ b/docker/Dockerfile.prod
@@ -1,14 +1,8 @@
 # syntax=docker.io/docker/dockerfile:1
 FROM node:24-alpine AS base
 
-# 1. Install dependencies only when needed
 FROM base AS deps
-# Check https://github.com/nodejs/docker-node/tree/b4117f9333da4138b03a546ec926ef50a31506c3#nodealpine to understand why libc6-compat might be needed.
-RUN apk add --no-cache libc6-compat
-
 WORKDIR /app
-
-# Install dependencies based on the preferred package manager
 COPY package.json yarn.lock* package-lock.json* pnpm-lock.yaml* .npmrc* ./
 RUN npm ci
 
@@ -24,18 +18,18 @@ WORKDIR /app
 ENV NODE_ENV=production
 
 RUN addgroup -g 1001 -S nodejs
-RUN adduser -S nextjs -u 1001
+RUN adduser -S tsstart -u 1001
 
 COPY --from=builder /app/public ./public
 
-COPY --from=builder --chown=nextjs:nodejs /app/.next/standalone ./
-COPY --from=builder --chown=nextjs:nodejs /app/.next/static ./.next/static
+COPY --from=builder --chown=tsstart:nodejs /app/.tanstack/start/build ./.tanstack/start/build
+COPY --from=builder --chown=tsstart:nodejs /app/.output ./.output
+COPY --from=deps /app/node_modules ./node_modules
 
-
-USER nextjs
+USER tsstart
 
 EXPOSE 3000
 
 ENV PORT=3000
 
-CMD HOSTNAME="0.0.0.0" node server.js
+CMD ["node", ".output/server/index.mjs"]
