--- a/docker/Dockerfile.prod
+++ b/docker/Dockerfile.prod
@@ -6,6 +6,10 @@ WORKDIR /app
 COPY package.json package-lock.json* .npmrc* ./
 RUN npm ci
 
+FROM base AS migrations
+WORKDIR /app
+RUN npm install drizzle-orm pg dotenv drizzle-kit tsx
+
 FROM base AS builder
 WORKDIR /app
 COPY --from=deps /app/node_modules ./node_modules
@@ -21,7 +25,11 @@ RUN adduser -S tsstart -u 1001
 COPY --from=builder --chown=tsstart:nodejs /app/public ./public
 COPY --from=builder --chown=tsstart:nodejs /app/.tanstack/start/build ./.tanstack/start/build
 COPY --from=builder --chown=tsstart:nodejs /app/.output ./.output
-COPY --from=deps /app/node_modules ./node_modules
+COPY --from=builder --chown=tsstart:nodejs /app/package.json ./package.json
+COPY --from=builder --chown=tsstart:nodejs /app/src/drizzle ./src/drizzle
+COPY --from=builder --chown=tsstart:nodejs /app/drizzle.config.ts ./drizzle.config.ts
+
+COPY --from=migrations --chown=tsstart:nodejs /app/node_modules ./node_modules
 
 USER tsstart
 
