--- a/package.json
+++ b/package.json
@@ -13,26 +13,26 @@
     "@chakra-ui/react": "^3.21.0",
     "@emotion/react": "^11.14.0",
     "@maciekdev/fetcher": "^1.8.0",
-    "jose": "^6.0.11",
-    "lucide-react": "^0.516.0",
-    "drizzle-orm": "^0.44.2",
-    "pg": "^8.16.0",
-    "zod": "^3.25.67",
     "@tanstack/react-router": "^1.121.27",
     "@tanstack/react-router-devtools": "^1.121.27",
     "@tanstack/react-start": "^1.121.32",
-    "react": "^19.0.0",
     "dotenv": "^16.5.0",
-    "react-dom": "^19.0.0"
+    "drizzle-orm": "^0.44.2",
+    "jose": "^6.0.11",
+    "lucide-react": "^0.516.0",
+    "pg": "^8.16.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "zod": "^3.25.67"
   },
   "devDependencies": {
     "@types/node": "^22.5.4",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
+    "drizzle-kit": "^0.31.1",
     "tailwindcss": "^4.0.8",
     "typescript": "^5.7.2",
     "vite": "^6.3.5",
-    "vite-tsconfig-paths": "^5.1.4",
-    "drizzle-kit": "^0.31.1"
+    "vite-tsconfig-paths": "^5.1.4"
   }
 }
